<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_browse"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/title_browse" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_cart_24dp"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_book_24dp"
        android:title="@string/title_info" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_24dp"
        android:title="@string/title_profile" />

</menu>