<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="@+id/guideline8" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/poppins"
                android:text="@string/join_with_us"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <TextView
                    android:id="@+id/register_first_name_input_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name_input_label" />

                <EditText
                    android:id="@+id/register_first_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/first_name_input_label"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/register_first_name_input_error_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text=""
                    android:textColor="@color/error" />

                <TextView
                    android:id="@+id/register_last_name_input_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name_input_label" />

                <EditText
                    android:id="@+id/register_last_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/last_name_input_label"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/register_last_name_input_error_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text=""
                    android:textColor="@color/error" />

                <TextView
                    android:id="@+id/register_email_input_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_input_label" />

                <EditText
                    android:id="@+id/register_email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email_input_label"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/register_email_input_error_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text=""
                    android:textColor="@color/error" />

                <TextView
                    android:id="@+id/register_address_input_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address_input_label" />

                <EditText
                    android:id="@+id/register_address_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/address_input_label"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/register_address_input_error_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text=""
                    android:textColor="@color/error" />

                <TextView
                    android:id="@+id/register_password_input_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password_input_label" />

                <EditText
                    android:id="@+id/register_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password_input_label"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/register_password_input_error_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text=""
                    android:textColor="@color/error" />

                <TextView
                    android:id="@+id/register_confirm_password_input_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_password_input_label" />

                <EditText
                    android:id="@+id/register_confirm_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/confirm_password_input_label"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/register_confirm_password_input_error_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text=""
                    android:textColor="@color/error" />
            </LinearLayout>

            <Button
                android:id="@+id/register_button"
                android:layout_width="147dp"
                android:layout_height="65dp"
                android:layout_marginTop="32dp"
                android:onClick="onRegister"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/register"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>